# work-feed-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  justfile  pyproject.toml
.codex/skills/upwork-pipeline/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci-cd.yml  deploy-oracle.yml  deploy-server.yml  quality.yml  release.yml
.omx/context/: upwork-collector-python-core-20260510T060609Z.md
.omx/plans/: prd-upwork-collector-python-core-20260510T061043Z.md  test-spec-upwork-collector-python-core-20260510T061043Z.md
deploy/systemd/: upwork-collector.service  upwork-collector.timer
docs/: ARCHITECTURE.md  EXTERNAL_LLM_GUIDE.md  LLM_CONTEXT.md  ORACLE_CLOUD_DEPLOY.md  PRD.md  RELEASING.md  TEST_PLAN.md  TRD.md  architecture.d2  code-quality-responsibility.md  fastapi-backend-structure.md  mcp-client-setup.md  scheduler-plan.md  server-install.md
docs/adr/: 0001-docker-mcp-first-runtime.md  0001-python-jsonl-collector.md  0002-worker-owned-sqlite-schema.md  0003-mcp-control-tools-enqueue-commands.md  0004-persist-normalized-records-not-raw-upstream-payloads.md  0005-keep-ranking-outside-core-data-engine.md  README.md
docs/contracts/: job-jsonl.md
scripts/: collect_live_once.sh
scripts/deploy/: oracle-compose-deploy.sh  should-deploy-oracle.sh
skills/work-feed-jobs/: SKILL.md
skills/work-feed-jobs/agents/: openai.yaml
specs/001-public-repo-readiness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-public-repo-readiness/checklists/: requirements.md
specs/001-public-repo-readiness/contracts/: public-surface.md
specs/002-worker-runtime-stability/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-worker-runtime-stability/checklists/: requirements.md
specs/002-worker-runtime-stability/contracts/: runtime-stability.md
src/upwork_app/: __main__.py  main.py
src/upwork_app/api/: deps.py  error_mapping.py
src/upwork_app/cli/: __main__.py  analytics.py  args.py  collect.py  collect_scheduled.py  health.py  ingest.py  mcp_server.py  scheduler.py  scheduler_status.py  worker.py
src/upwork_app/core/: config.py
src/upwork_app/db/: connection.py  schema.py
src/upwork_app/domain/: collector_record.py
src/upwork_app/mcp_server/: server.py  tools.py
src/upwork_app/repositories/: analytics.py  collector_control.py  ingestion.py  jobs.py
src/upwork_app/runtime/: config.py  worker.py
src/upwork_app/schemas/: analytics.py  collect.py  ingest.py
src/upwork_app/services/: analytics.py  collector.py  collector_control.py  health.py  ingestion.py  job_queries.py  retry.py  run_status.py  scheduled_collection.py  scheduler_status.py  system_scheduler.py
src/upwork_collector/: __main__.py  cli.py  graphql.py  normalize.py  transport.py
src/work_feed_mcp/: __main__.py
src/work_feed_mcp/cli/: __main__.py  analytics.py  args.py  collect.py  collect_scheduled.py  health.py  ingest.py  mcp_server.py  mcp_smoke.py  output.py  scheduler_status.py  worker.py
src/work_feed_mcp/core/: config.py  time.py
src/work_feed_mcp/db/: connection.py  schema.py
src/work_feed_mcp/domain/: collector_record.py
src/work_feed_mcp/mcp_server/: server.py  tools.py
src/work_feed_mcp/repositories/: analytics.py  client_analytics.py  collector_control.py  ingestion.py  jobs.py  run_history.py
src/work_feed_mcp/runtime/: config.py  worker.py
tests/: collector_db_helpers.py  conftest.py  http_helpers.py  run_history_helpers.py  test_api_app.py  test_cli_contract.py  test_credentials.py  test_graphql_contract.py  test_models.py  test_normalize.py
tests/analytics/: test_client_analytics.py  test_queries_cli.py  test_service_errors.py
tests/cli/: test_collect_scheduled_cli.py  test_health_cli.py  test_mcp_smoke_cli.py  test_scheduler_cli.py  test_scheduler_status_cli.py
tests/collector/: test_credentials.py  test_error_exit_codes.py  test_graphql_contract.py  test_models.py  test_normalize.py  test_transport_contract.py
tests/db/: test_connection_policy.py
tests/docker/: deploy_contract_helpers.py  test_ci_workflow_contract.py  test_compose_contract.py  test_deploy_workflow_contract.py  test_docs_contract.py  test_oracle_deploy_decision.py  test_oracle_deploy_script_behavior.py  test_oracle_deploy_script_contract.py  test_oss_readiness_contract.py  test_release_workflow_contract.py  test_rename_contract.py
tests/domain/: test_collector_record.py
tests/fixtures/: graphql_errors_response.json  live_job_tile_response.json  malformed_response.json  missing_optional_fields_response.json
tests/ingest/: test_ingest_cli_schema.py  test_ingestion_service.py
tests/mcp_server/: test_not_ready.py  test_server.py  test_tools.py
tests/repositories/: test_collector_control.py  test_jobs.py
tests/runtime/: test_config.py  test_worker.py
tests/services/: test_collector.py  test_health.py  test_job_queries.py  test_retry.py  test_run_history.py  test_run_status.py  test_scheduled_collection.py  test_scheduler_status.py
(+28 files in other folders)
