[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upwork-app"
version = "0.1.0"
description = "CLI-first data engine for the Upwork job discovery pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "upwork-app maintainers" }]
dependencies = [
    "curl-cffi>=0.15.0",
    "mcp>=1.23.0",
]

[project.scripts]
upwork-app = "upwork_app.cli.__main__:main"
upwork-app-collect = "upwork_app.cli.collect:main"
upwork-app-ingest = "upwork_app.cli.ingest:main"
upwork-app-analytics = "upwork_app.cli.analytics:main"
upwork-app-collect-scheduled = "upwork_app.cli.collect_scheduled:main"
upwork-app-health = "upwork_app.cli.health:main"
upwork-app-scheduler-status = "upwork_app.cli.scheduler_status:main"
upwork-app-scheduler = "upwork_app.cli.scheduler:main"
upwork-app-worker = "upwork_app.cli.worker:main"
upwork-app-mcp-server = "upwork_app.cli.mcp_server:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["upwork_app"]
plugins = []
