[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "work-feed-mcp"
version = "0.1.0"
description = "Docker/MCP-first data engine for the Upwork job discovery pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "work-feed-mcp maintainers" }]
dependencies = [
    "curl-cffi>=0.15.0",
    "mcp>=1.23.0",
]

[project.scripts]
work-feed = "work_feed_mcp.cli.__main__:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["work_feed_mcp"]
plugins = []
