[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "work-feed-mcp"
version = "0.1.0"
description = "Docker/MCP-first data engine for the Upwork job discovery pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "work-feed-mcp maintainers" }]
dependencies = [
    "curl-cffi>=0.15.0",
    "mcp>=1.23.0",
]

[project.scripts]
work-feed = "work_feed_mcp.cli.__main__:main"

[project.optional-dependencies]
dev = [
  "import-linter>=2.5",
  "mypy>=1.10",
  "pytest>=8",
  "pytest-cov>=7.1",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
filterwarnings = [
  "error::ResourceWarning",
  "error::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["work_feed_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.importlinter]
root_package = "work_feed_mcp"

[[tool.importlinter.contracts]]
name = "Domain stays independent from infrastructure"
type = "forbidden"
source_modules = ["work_feed_mcp.domain"]
forbidden_modules = [
  "work_feed_mcp.cli",
  "work_feed_mcp.db",
  "work_feed_mcp.integrations",
  "work_feed_mcp.mcp_server",
  "work_feed_mcp.repositories",
  "work_feed_mcp.runtime",
  "work_feed_mcp.services",
]

[[tool.importlinter.contracts]]
name = "Persistence layers stay below application interfaces"
type = "forbidden"
source_modules = ["work_feed_mcp.db", "work_feed_mcp.repositories"]
forbidden_modules = [
  "work_feed_mcp.cli",
  "work_feed_mcp.integrations",
  "work_feed_mcp.mcp_server",
  "work_feed_mcp.runtime",
  "work_feed_mcp.services",
]

[[tool.importlinter.contracts]]
name = "Upwork integration stays below app interfaces"
type = "forbidden"
source_modules = ["work_feed_mcp.integrations.upwork"]
forbidden_modules = [
  "work_feed_mcp.cli",
  "work_feed_mcp.db",
  "work_feed_mcp.mcp_server",
  "work_feed_mcp.repositories",
  "work_feed_mcp.runtime",
  "work_feed_mcp.services",
]

[[tool.importlinter.contracts]]
name = "Services do not depend on interface adapters"
type = "forbidden"
source_modules = ["work_feed_mcp.services"]
forbidden_modules = [
  "work_feed_mcp.cli",
  "work_feed_mcp.mcp_server",
  "work_feed_mcp.runtime",
]

[[tool.importlinter.contracts]]
name = "MCP adapter does not depend on CLI"
type = "forbidden"
source_modules = ["work_feed_mcp.mcp_server"]
forbidden_modules = ["work_feed_mcp.cli"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["work_feed_mcp"]
plugins = []
